--- a/WDLesson2_6Practical/css.html
+++ b/WDLesson2_6Practical/css.html
@@ -40,16 +40,16 @@
     </nav>
     <!-- Challenge 2: Create a banner container with heading of "Web Development".  Give it a class of "banner".-->
     <div class = "banner"> 
-      <h1>Web Development</h1>
+      <h1>CSS</h1>
     </div>
     <div class="main">
       <!-- Challenge 3: Add the image of webicons.png-->
-       <img src ="webicons.png" style = "height:250px;">
+       <img src ="css.png" style = "height:250px;">
       <!-- Challenge 4: Using inline styling, resize the above image appropriately -->
        
       <!-- Challenge 5: Write a paragraph describing web development.  Discuss the purpose of HTML, CSS and JavaScript -->
        <p> 
-        Web development is the process of building and maintaining websites and web applications.
+        CSS stands for Cascading Style Sheets. It is a stylesheet language used to describe the presentation of a document written in a markup language like HTML.
        </p>
 
     </div>
