--- a/WDLesson2_6Practical/html.html
+++ b/WDLesson2_6Practical/html.html
@@ -40,16 +40,16 @@
     </nav>
     <!-- Challenge 2: Create a banner container with heading of "Web Development".  Give it a class of "banner".-->
     <div class = "banner"> 
-      <h1>Web Development</h1>
+      <h1>HTML</h1>
     </div>
     <div class="main">
       <!-- Challenge 3: Add the image of webicons.png-->
-       <img src ="webicons.png" style = "height:250px;">
+       <img src ="html.png" style = "height:250px;">
       <!-- Challenge 4: Using inline styling, resize the above image appropriately -->
        
       <!-- Challenge 5: Write a paragraph describing web development.  Discuss the purpose of HTML, CSS and JavaScript -->
        <p> 
-        Web development is the process of building and maintaining websites and web applications.
+        HTML, which stands for HyperText Markup Language, is the standard language used to create and structure web pages.
        </p>
 
     </div>
