--- a/WDLesson2_6Practical/css.html
+++ b/WDLesson2_6Practical/css.html
@@ -16,7 +16,7 @@
     <script src="script.js"></script>
     <style>
       /* Challenge 6: Using internal styling,  change the color of the web page.*/
-      bpdy{
+      body{
         color:aquamarine
       }
       /* Further challenges are located in style.css  */
