--- a/WDLesson2_6Practical/index.html
+++ b/WDLesson2_6Practical/index.html
@@ -16,8 +16,8 @@
     <script src="script.js"></script>
     <style>
       /* Challenge 6: Using internal styling,  change the color of the web page.*/
-      bpdy{
-        color:aquamarine
+      body{
+        background-color:aquamarine;
       }
       /* Further challenges are located in style.css  */
 
