--- a/WDLesson2_6Practical/index.html
+++ b/WDLesson2_6Practical/index.html
@@ -17,7 +17,7 @@
     <style>
       /* Challenge 6: Using internal styling,  change the color of the web page.*/
       body{
-        background-color:aquamarine;
+        background-color: whitesmoke;
       }
       /* Further challenges are located in style.css  */
 
