--- a/WDLesson2_6Practical/css.html
+++ b/WDLesson2_6Practical/css.html
@@ -17,7 +17,7 @@
     <style>
       /* Challenge 6: Using internal styling,  change the color of the web page.*/
       body{
-        color:aquamarine
+        color:tan;
       }
       /* Further challenges are located in style.css  */
 
